--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,9 @@
   box-sizing: border-box;
 }
 
+body{
+  background-color: antiquewhite;
+}
 .Navbar {
   display: flex;
   justify-content: flex-end;
@@ -42,20 +45,21 @@ a {
   margin-top: 20px;
 }
 
-.buttonSelector{
+.buttonSelector {
   display: flex;
 }
 
-.buttonSelector button{
-  padding: 5px;
+.buttonSelector button {
+  padding: 10px;
   text-align: center;
   margin: 5px;
   margin-right: auto;
   margin-left: auto;
   font-weight: bolder;
-  border: 1px solid black;
+  border: 1px solid darkgreen;
   border-radius: 5px;
   margin-top: 50px;
+  background-color: white;
 }
 
 .deleteButton {
@@ -74,8 +78,6 @@ a {
   color: white;
   font-weight: bold;
 }
-
-
 
 table {
   margin: auto;
@@ -109,12 +111,43 @@ input {
   width: auto;
 }
 
-.headUserInput {
-  
- 
+.tableData{
+  margin-top: 20px;
+}
+.tableData tr{
+ background-color: white;
+}
+.tableData th{
+  background-color: #ddd;
+}
+.nameOwner {
+  margin-right: auto;
+  margin-left: auto;
+  width: 500px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
-.inputCreate {
-  
+.nameOwner h1 {
+  margin-bottom: 20px;
 }
 
+.nameOwner h3 {
+  margin-top: 20px;
+}
+
+.nameOwner p {
+  margin-top: 20px;
+}
+.createNewMember{
+  margin-top: 20px;
+}
+
+.createNewMember td{
+  margin-top: 20px;
+  background-color: white;
+}
+.createNewMember th{
+  background-color: #ddd;
+}
